@@ -5,13 +5,13 @@ AUX googleearth-7-desktopfile.patch 646 SHA256 9b69e401ea0a6c70c69c5f7848c1a62bd
 AUX googleearth-mimetypes.xml 638 SHA256 71e57a7370dc2c0eb6b85e2bbb5282ed7a7542e58f849a20282b1627cef9b2b9 SHA512 47c855b0a3c2ad0e8951f238411ef99f029c3f9079803d4063072fa03b4fe02c69fc57ae9cc599d0bb5d1b3b584d73928b2eea6a4faded8f0074139a5c08a79c WHIRLPOOL edac2920e71b589668fff0f83dc96c8e088c4894156f2f3d6b69cb6043e71bf59d5b2584bebf5169ee3fe07501c8fcf7f30c664bd5466e6df0179bfff8215510
 DIST GoogleEarthLinux-7.1.2.2041_amd64.deb 46544886 SHA256 e440ee901779daa210725ebaf4a9b01a638a43d25566bd2e5e20b3b3d75940e2 SHA512 88bc5faddcf607ee687db5f5d97ba58673846684b3a32d8378dd4d015e9fc7f6fdf6d3386dcf788a29426f334b90b985b8fe36314c587fa78b10e6fc0df393ef WHIRLPOOL 785ab294f2ff00097a3bd3c446a1749a1469d78ff6f62b14f663ff981cd272a417c7a39df3a844b728bc46a086bb34221316deafbd0271e8f7dab87334ef1841
 DIST GoogleEarthLinux-7.1.2.2041_i386.deb 45684888 SHA256 514ad36ae86fe330c56ce7a313c08e4c5276d43bd81f28aeee1f3f29f5586755 SHA512 67a9790fa2ddecbc28a275f639a0e02308236855532b781770cf89bd3522c71bc895101ac18f3441a2d5ebf7339bf67d1146604aac5e4cad52d8c4cd725e5df3 WHIRLPOOL 12c9e3c025ce6cf3bba1d54101cb4968bc7f12c6a0b636801156a5f34b3d04c557cae502ef607680629215615bc7f6e7dacc541c05e5015fc7fa7c9bb01836bf
-EBUILD googleearth-7.1.2.2041.ebuild 5263 SHA256 6c0f6ec9c144bd7afcf5ef91ce0aef0c3d97b012e518c5e055359dab42395140 SHA512 e49cc4e609e035c266c12966ed0936e2bb98a0f8860f9ef5e1149731865dbef3bc2b2293fc5c181d59479ae5c3a8ec0ed261a48c856bc04ed46148b54a92a6fd WHIRLPOOL 32f418bb0385baf5d825501faddfb19277d64e45b9735552d678b054c83965090fb3787f4ea701dfc0852ee41ec1ab7a05807af7e073a6e18661c38dff928a16
-MISC ChangeLog 23393 SHA256 9a645bb2ab6a57fb9d682f083b93ec94408cfbf55b02749a18126ceb655bf9ea SHA512 60a8902ed8a1ef2620b9c4cf24ab884d65b8fe9e3d5aaf2d8d98ee46334f8b473b6c2ef2345973e069398d0253643874aaccf0abc311c0b690e3c2053d724840 WHIRLPOOL d90101a565133ece2c218c7eed97ded93cee8c4b0ca0b80eab98b53939ec933816857f8861aaf87a6fcae954d6e00231569cc91db4e987642693c6a4f8d9ca59
+EBUILD googleearth-7.1.2.2041.ebuild 5264 SHA256 2b66899982be35f4218cad910a1912a454c10ef27b67435768d4660dfde2e0cd SHA512 a7987a870bfbf3f06704ea2eb924019443898fc55741e9f761ef5eda6c15ab080e525b8194a9792baf6909c1c81f16fcb5318209e8106a39489869bd4e46e271 WHIRLPOOL 06f597dab47c7e36228bfc802ce6388c5987315f53a46f221f2b777913e7f62cfa80fb3b062ef59f34e406748c929025a3f4cf1c27b04905c24d175db3dd7e03
+MISC ChangeLog 23549 SHA256 0df33bf64184c040aa8dba07e2551453a1aef461ee4a4f01e59d00ed7f5d3b15 SHA512 933b0c4087b22489a10a0ebcb95762e6ca4bf5f6cd8c677cc72174d54c2d94a9daf23869f6e04e3c29eb676c139efc39740ba3d0a68a5d34f09259ab798a8f29 WHIRLPOOL f9677f88de8a282de434d7499fd47b16ea26156fd0c675a15339bb785ea0f231e64a666fcefc7b366a9189f0330a35dc6e36942d7039c952742583cb9e3835a2
 MISC metadata.xml 277 SHA256 668c398262a7a9b2d75c9130ebc5a3c89baf52199fb205b1a201724515c903bb SHA512 149f7217ec6f42cb5e3fc4a405877eb4c13fbd2d28dc26fe9b88462df9a69f27584de2ec3a9d735460cc5c17c9f731d30118712f0fb8b2347749074df1bf9b2a WHIRLPOOL 1ee26899dba57c912f1338456ba59d3ba91a3568a6df29323b5122922cd9231657b80a344fd09894d9a542897ea2a617c2236d772de604d478fc4f5ae801122a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iD8DBQFS9lOpKWxsyjWmQTQRCNkzAJ9nvKAcIyv1+hEqe2G4/bNuevCWDACeOHVn
-iNucZCqBn0ISHQEJgawiNww=
-=n6DP
+iD8DBQFU/kE9KWxsyjWmQTQRCL84AJ9of2/GeWSE+MGARijOQe1g/lCpVgCfbv5d
+6rVzrZdZ02LMx8S7PGkambE=
+=FPyg
 -----END PGP SIGNATURE-----
